--- a/style.css
+++ b/style.css
@@ -1,28 +1,42 @@
 html * {
     margin: 0px;
-    padding: 0px;
+    padding: 50px;
     text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /* background-color: black; */
+    /* color: white; */
 
 }
 #start{
-    background-color: blue;
+    /* background-color: rgba(255, 255, 255, 0.392); */
     padding: 20px 100px 20px 100px;
 }
 
 #game {
-    background: yellow;
+    /* background: rgba(250, 250, 250, 0.187); */
     padding: 100px;
 }
 
 #game-over {
-    background-color: red;
+    /* background-color: rgba(250, 250, 250, 0.187); */
     padding: 100px;
+
+}
+button{
+    padding: 15px 45px 15px 45px;
+    margin: 50px;
+    font-size: 30px;
+    font-variant: small-caps;
+    /* background-color: black; */
 }
 
 h1 {
-    background-color: green; 
+    /* background-color: rgba(250, 250, 250, 0.187); */
     padding: 50px 100px 50px 100px;
 }
+/* h2 {
+    background-color: rgba(255, 255, 255, 0);
+} */
 
 #quiz-questions{
     background-color: grey;
@@ -34,11 +48,15 @@ h1 {
     padding: 50px 100px 50px 100px;
 }
 
-#next-btn {
-    background-color: white;
-}
+/* #next-btn {
+    background-color: black;
+} */
 
 #timer {
-    background-color: orange;
+    background-color: red;
+    padding: 10px;
+}
+
+#add-score{
     padding: 10px;
 }
