--- a/style.css
+++ b/style.css
@@ -23,10 +23,13 @@ html * {
 
 }
 button{
-    padding: 15px 45px 15px 45px;
-    margin: 50px;
-    font-size: 30px;
+    padding: 5px;
+    margin: 5px;
+    font-size: 20px;
     font-variant: small-caps;
+    width: 120px;
+    text-align: left;
+
     /* background-color: black; */
 }
 
