--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 *html{
     padding: 0px;
     margin: 0px;
-    
     text-align: center;
 }
 
 input {
-    font-size: 30px;
+    font-size: 16px;
 }
 
 label {
@@ -20,7 +19,6 @@ label {
     text-align: center;
     font-size: 60px;
     font-variant: small-caps;
-    
 }
 
 
@@ -55,4 +53,17 @@ label {
 p {
     padding: 30px;
     font-size: 30px;
+}
+
+
+#submit-score {
+    
+    align-items: center;
+    margin: 20px;
+
+}
+
+
+#play-again {
+    margin-top: 40px;
 }
